Verify HTML and JS content in tests

--- a/test/basics/demo-with-ids.html
+++ b/test/basics/demo-with-ids.html
@@ -1,4 +1,4 @@
-<div id="demo-html">Hello world!</div>
+<div id="demo-html"><b>Hello world!</b></div>
 <script id="demo-source">
 	var div = document.createElement("div");
 	div.textContent = "it worked!";
