--- a/test/demos/demo-complex/demo-complex.html
+++ b/test/demos/demo-complex/demo-complex.html
@@ -5,7 +5,7 @@
 </script>
 </script>
 
-<script src="../../node_modules/steal/steal.js" main="@empty" id='demo-source'>
+<script src="node_modules/steal/steal.js" main="@empty" id='demo-source'>
 import "can-view-autorender";
 import "can-stache";
 import viewModel from "can-view-model";
