--- a/test/demos/demo-without-ids.html
+++ b/test/demos/demo-without-ids.html
@@ -1,4 +1,4 @@
-<div>Hello world!</div>
+<div><b>Hello world!</b></div>
 <script>
 	var div = document.createElement("div");
 	div.textContent = "it worked!";
